[package]
name = "dtm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
futures-util = "0.3.28"
kdam = { version = "0.4.1", features = ["rich", "spinner"] }
log = "0.4.20"
octocrab = "0.31.0"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = { version = "1.4.0", features = [] }
